help page completed

--- a/assets/templates/help_template.html
+++ b/assets/templates/help_template.html
@@ -30,7 +30,7 @@
         <div class="help-table">
             <h2>How to use JOIN</h2>
 
-            <h2><i><u>Task Management</u></i></h2>
+            <h2 style="color: #28ABE2 ;"><i>Task Management</i></h2>
 
             <h3>Add a task</h3>
 
@@ -89,13 +89,13 @@
             </div>
             
             
-            <h2><i><u>Contact Book</u></i></h2>
+            <h2 style="color: #28ABE2 ;"><i>Contact book</i></h2>
 
             <h3>Add a contact</h3>
 
             <div>
                 <span>1.</span>
-                <p>Simply click on any <i>"Add task"</i> button you see and fill out all the required fields.</p>
+                <p>Click on the <i>"New contact"</i> button.</p>
             </div>
             <div>
                 <span>2.</span>
@@ -103,18 +103,18 @@
             </div>
             <div>
                 <span>3.</span>
-                <p>Your task will be <i>added to the board</i> where you can move your task around depending of its status. </p>
+                <p>Your contact will be <i>added to the list</i> where you can also edit it afterwards. </p>
             </div>
 
             <h3>Edit a contact</h3>
 
             <div>
                 <span>1.</span>
-                <p>Click on any <i>task card</i> to open up the detail view.</p>
+                <p><i>Select a contact</i> to open up the detail view.</p>
             </div>
             <div>
                 <span>2.</span>
-                <p>Click on the <u><i>pencil symbol in the lower right corner</i></u> to edit your task.</p>
+                <p>Click on the <u><i>pencil symbol</i></u> to edit the selected contact.</p>
             </div>
             
 
@@ -122,11 +122,11 @@
 
             <div>
                 <span>1.</span>
-                <p>Click on any <i>task card</i> to open up the detail view.</p>
+                <p><i>Select a contact</i> to open up the detail view.</p>
             </div>
             <div>
                 <span>2.</span>
-                <p>Click on the <u><i>pencil symbol in the lower right corner</i></u> to edit your task.</p>
+                <p>Click on the <u><i>circle</i></u> with the contacts initials to change the color.</p>
             </div>
             
 
