legal notice css

--- a/legal_notice_style.css
+++ b/legal_notice_style.css
@@ -48,9 +48,9 @@ body {
 .back-overlay-btn {
     height: 35px;
     width: 35px;
-    position: absolute;
-    right: 32px;
-    top: 50px;
+    position: fixed;
+    right: 22px;
+    top: 115px;
     cursor: pointer;
 }
 
@@ -65,26 +65,26 @@ body {
 }
 
 /* ===== Scrollbar CSS ===== */
-  /* Firefox */
-  .inner-content {
+/* Firefox */
+.inner-content {
     scrollbar-width: auto;
     scrollbar-color: #2a3647 #F6F7F8;
-  }
+}
 
-  /* Chrome, Edge, and Safari */
-  .inner-content::-webkit-scrollbar {
+/* Chrome, Edge, and Safari */
+.inner-content::-webkit-scrollbar {
     width: 10px;
-  }
+}
 
-  .inner-content::-webkit-scrollbar-track {
+.inner-content::-webkit-scrollbar-track {
     background: #F6F7F8;
-  }
+}
 
-  .inner-content::-webkit-scrollbar-thumb {
+.inner-content::-webkit-scrollbar-thumb {
     background-color: #2a3647;
     border-radius: 10px;
     border: 1px solid #ffffff;
-  }
+}
 
 
 
@@ -96,6 +96,10 @@ body {
 
     .content-mobile {
         display: flex;
+    }
+
+    .content-container {
+        padding-bottom: 80px;
     }
 }
 
@@ -110,16 +114,14 @@ body {
         font-size: 44px;
     }
 
-    .back-overlay-btn {
-        top: 32px;
+    .content-container {
+        width: 95%;
     }
 
 }
 
 @media(max-width: 450px) {
-    .back-overlay-btn {
-        right: 0;
-    }
+
 
     .main-heading {
         font-size: 37px;
@@ -127,14 +129,18 @@ body {
 }
 
 @media(max-width: 450px) {
+
     .back-overlay-btn {
-        right: -32px;
-        top: 7px;
+        position: fixed;
+        right: 0px;
+        top: 88px;
+
     }
+
 
     .sub-heading {
         font-size: 23px;
-        text-overflow: ellipsis; 
+        text-overflow: ellipsis;
 
     }
 }
