--- a/login_style.css
+++ b/login_style.css
@@ -217,14 +217,15 @@ body {
 }
 
 .login-head button {
-    width: 65px;
-    height: 35px;
+    width: 87px;
+    height: 37px;    
     font-size: 12px;
     background-color: rgb(42, 54, 71);
     color: rgb(255, 255, 255);
     border-radius: 5px;
-    margin-left: 5%;
+    margin-left: 22px;
     border: none;
+    font-weight: 600;
 }
 
 .login-area {
