--- a/assets/templates/add_task_template.css
+++ b/assets/templates/add_task_template.css
@@ -91,11 +91,12 @@ body {
 
 input {
     font-family: Inter;
-    font-size: 14px;
-    padding: 4px;
+    font-size: 16px;
+    padding: 4px 8px;
     border-radius: 8px;
     border: 1px solid rgb(214, 214, 214);
     margin-left: 8px;
+    height: 32px;
 }
 
 input:hover {
@@ -108,12 +109,13 @@ input:focus {
 
 textarea {
     font-family: Inter;
-    font-size: 14px;
-    padding: 4px;
+    font-size: 16px;
+    padding: 8px;
     border-radius: 8px;
     border: 1px solid rgb(214, 214, 214);
     margin-left: 8px;
     resize: none;
+    height: 92px;
 }
 
 textarea:hover {
@@ -126,12 +128,24 @@ textarea:focus {
 
 select {
     font-family: Inter;
-    font-size: 14px;
-    padding: 4px;
+    font-size: 16px;
+    padding: 4px 8px;
     border-radius: 8px;
     border: 1px solid rgb(214, 214, 214);
     margin-left: 8px;
+    height: 42px;
 }
+
+.selected-category-color{
+    width: 24px;
+    height: 24px;
+    background-color: white;
+    border-radius: 100%;
+    position: absolute;
+    top: 64%;
+    left: 80%;
+}
+
 
 select:focus {
     outline: none;
@@ -348,15 +362,17 @@ option {
 .dropdown-check-list-contacts .anchor {
     position: relative;
     cursor: pointer;
-    display: inline-block;
+    display: flex;
+    align-items: center;
     padding: 5px 50px 5px 10px;
     border: 1px solid #ccc;
     margin: 0;
     width: -webkit-fill-available;
     margin-left: 8px;
-    font-size: 14px;
+    font-size: 16px;
     background-color: white;
     border-radius: 8px;
+    height: 30px;
 }
 
 .dropdown-check-list-contacts .anchor:after {
@@ -366,7 +382,7 @@ option {
     border-top: 1px solid black;
     padding: 2.63px;
     right: 6px;
-    top: 33%;
+    top: 40%;
     -moz-transform: rotate(-135deg);
     -ms-transform: rotate(-135deg);
     -o-transform: rotate(-135deg);
@@ -395,6 +411,10 @@ option {
     padding: 4px;
     border-radius: 8px;
     margin: 4px 0px;
+    display: flex;
+    align-items: center;
+    height: 24px;
+    font-size: 18px;
 }
 
 .dropdown-check-list-contacts ul.items li:hover {
@@ -427,6 +447,13 @@ option {
     border-radius: 10px;
     border: 1px solid #ffffff;
   }
+
+  @media(max-width: 1100px){
+    .choosePriority div {
+        width: 96px;
+    }
+}
+
 
 @media(max-width:1024px) {
     .background {
