--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -24,7 +24,7 @@
     <div class="content-background" id="close-addTask-background" onclick="hideAddTaskTemplate()">
         <div id="content-addtask" class="content-addtask flyIn" onclick="doNotClose(event)">
             <h1 class="addtask-h1">Add task</h1>
-            <form id="formAddTask" onsubmit="createTask(); return false">
+            <form id="formAddTask" onsubmit="checkTaskToCreate(); return false">
                 <img src="assets/img/close-button-addtask.svg" class="close-btn" id="close-btn" onclick="hideAddTaskTemplate()">
                 <div class="formContentWithButton">
                     <div class="divContentAddtask"
@@ -33,9 +33,12 @@
                         <input required placeholder="Enter a title" id="input-title">
                         <span>Description</span>
                         <textarea required placeholder="Enter a description" id="input-description"></textarea>
-                        <span>Category</span>
-                        <select required id="select-category" onchange="showAddCategory()">
-                        </select>
+                        <div style="position: relative; display: flex; flex-direction: column;">
+                            <span>Category</span>
+                            <div class="selected-category-color" id="selected-category-colorDiv"></div>
+                            <select required id="select-category" onchange="showAddCategory()">
+                            </select>
+                        </div>
                         <div class="new-category d-none" id="create-category">
                             <div class="new-category-name">
                                 <input id="new-category" maxlength="10" placeholder="Name"></input>
