--- a/summary_style.css
+++ b/summary_style.css
@@ -269,6 +269,7 @@ body{
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-bottom: 60px;
     }
 
     .headline-mobile{
