--- a/add_task.css
+++ b/add_task.css
@@ -110,7 +110,7 @@ select:hover {
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .choosePriority img {
