--- a/assets/templates/add_task_template.css
+++ b/assets/templates/add_task_template.css
@@ -169,7 +169,7 @@ option {
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .choosePriority img {
