--- a/contacts_style.css
+++ b/contacts_style.css
@@ -197,6 +197,10 @@ h3 {
     right: 30px;
 }
 
+.arrow-back:hover {
+    cursor: pointer;
+}
+
 .headline-contacts h1 {
     font-size: 50px;
     font-weight: 700;
