--- a/add_task.css
+++ b/add_task.css
@@ -91,6 +91,7 @@ select {
     border: 1px solid rgb(214, 214, 214);
     margin-left: 8px;
     height: 42px;
+    background-color: white;
 }
 
 select:focus {
