--- a/assets/templates/add_task_template.css
+++ b/assets/templates/add_task_template.css
@@ -134,6 +134,7 @@ select {
     border: 1px solid rgb(214, 214, 214);
     margin-left: 8px;
     height: 42px;
+    background-color: white;
 }
 
 .selected-category-color{
