--- a/assets/templates/add_task_template.css
+++ b/assets/templates/add_task_template.css
@@ -126,6 +126,18 @@ textarea:focus {
     outline: none;
 }
 
+.urgent{
+    background-color: red !important;
+}
+
+.medium{
+    background-color: orange !important ;
+}
+
+.low{
+    background-color: green !important;
+}
+
 select {
     font-family: Inter;
     font-size: 16px;
