--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -62,15 +62,15 @@
                         <input required type="date" id="input-date">
                         <span>Prio</span>
                         <div class="choosePriority">
-                            <div id="urgent-btn" onclick="clickPriorityButton('urgent-btn')">
+                            <div id="urgent-btn" onclick="clickPriorityButton('urgent')">
                                 <span>Urgent</span>
                                 <img src="assets/img/addTaskUrgentSymbol.svg">
                             </div>
-                            <div id="medium-btn" onclick="clickPriorityButton('medium-btn')">
+                            <div id="medium-btn" onclick="clickPriorityButton('medium')">
                                 <span>Medium</span>
                                 <img src="assets/img/addTaskMediumSymbol.svg">
                             </div>
-                            <div id="low-btn" onclick="clickPriorityButton('low-btn')">
+                            <div id="low-btn" onclick="clickPriorityButton('low')">
                                 <span>Low</span>
                                 <img src="assets/img/addTaskLowSymbol.svg">
                             </div>
